# fuse_practice

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
